# pe-hackathon-2026

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  events.csv  pyproject.toml  screenshots.txt  seed.py  urls.csv  users.csv
.github/workflows/: ci.yml
app/: __init__.py  database.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: __init__.py  events.py  shortener.py  users.py
docs/: ERROR_HANDLING.md  FAILURE_MODES.md
scripts/: chaos_test.sh
tests/: conftest.py  test_integration.py  test_units.py
